<resources>
    <string name="app_name">Velox</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
    <string name="add">ADD</string>
    <string name="my_activity">Activities</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="at">at</string>
    <string name="map_preview">Map Preview</string>
    <string name="avg_speed">AVG Speed</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="graph_preview">Graph Preview</string>
</resources>